<resources>
    <string name="app_name">santander-dev-week</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ola">Olá, </string>
    <string name="cliente">Aline</string>
    <string name="agencia">Ag</string>
    <string name="conta">Cc</string>
    <string name="saldo_disponivel">Saldo Disponível</string>
    <string name="ver_extrato">Ver extrato</string>
    <string name="cartao_final">Cartão final</string>
    <string name="saldo_mais_limite">Saldo + Limite:</string>
    <string name="pagar">Pagar</string>
    <string name="transferir">Transferir</string>
    <string name="recarga">Recarga</string>
    <string name="comprovantes">Comprovantes</string>


</resources>