<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".presentation.view.HomeFragment">


    <ImageView
        android:id="@+id/imageHomeBackgroundRed"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/colorPrimary"
        android:backgroundTint="@color/red_primary"
        app:layout_constraintDimensionRatio="16:6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textHomeHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/ola"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageHomeBackgroundRed" />

    <TextView
        android:id="@+id/textHomeClient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="Aline"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/textHomeHello"
        app:layout_constraintTop_toTopOf="@id/textHomeHello" />

    <TextView
        android:id="@+id/textHomeAgency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/agencia"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/textHomeHello"
        app:layout_constraintTop_toBottomOf="@id/textHomeHello" />

    <TextView
        android:id="@+id/textHomeNumberAgency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="6543"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/textHomeAgency"
        app:layout_constraintTop_toTopOf="@id/textHomeAgency" />

    <TextView
        android:id="@+id/textHomeAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/conta"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/textHomeNumberAgency"
        app:layout_constraintTop_toTopOf="@id/textHomeNumberAgency" />

    <TextView
        android:id="@+id/textHomeNumberAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="6543"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/textHomeAccount"
        app:layout_constraintTop_toTopOf="@id/textHomeAccount" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardHomeBalanceAvailable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toTopOf="@id/constraintHomeAvailableServices"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textHomeAgency">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageHomeBalanceAvailable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/ic_update_balance"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textHomeBalanceAvailable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/saldo_disponivel"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/imageHomeBalanceAvailable"
                app:layout_constraintStart_toEndOf="@id/imageHomeBalanceAvailable"
                app:layout_constraintTop_toTopOf="@id/imageHomeBalanceAvailable" />

            <ImageView
                android:id="@+id/imageHomeHideCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/ic_hide_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textHomeBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="R$ 4.328,54"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/imageHomeBalanceAvailable"
                app:layout_constraintTop_toBottomOf="@id/imageHomeBalanceAvailable" />

            <TextView
                android:id="@+id/textHomeBalancePlusLimit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saldo_mais_limite"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/textHomeBalance"
                app:layout_constraintTop_toBottomOf="@id/textHomeBalance" />

            <TextView
                android:id="@+id/textHomeBalanceTotalPlusLimit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="R$ 6.328,54"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/textHomeBalancePlusLimit"
                app:layout_constraintTop_toTopOf="@id/textHomeBalancePlusLimit" />

            <View
                android:id="@+id/viewHomeBalanceAvailable"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="24dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/textHomeBalanceTotalPlusLimit" />

            <TextView
                android:id="@+id/tv_ver_extrato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/ver_extrato"
                android:textColor="@color/red_secondary"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewHomeBalanceAvailable" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintHomeAvailableServices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardHomeBalanceAvailable">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerHomeAvailableServices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:itemCount="5"
            tools:listitem="@layout/item_services_available" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageHomeBackgroundCreditCard"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/red_primary"
        app:layout_constraintCircleRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintHomeAvailableServices" />

    <TextView
        android:id="@+id/textHomeFinalCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/cartao_final"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/imageHomeBackgroundCreditCard"
        app:layout_constraintStart_toStartOf="@id/imageHomeBackgroundCreditCard"
        app:layout_constraintTop_toTopOf="@id/imageHomeBackgroundCreditCard" />

    <TextView
        android:id="@+id/textHomeNumberFinalCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="1234"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/textHomeFinalCard"
        app:layout_constraintStart_toEndOf="@id/textHomeFinalCard"
        app:layout_constraintTop_toTopOf="@id/textHomeFinalCard" />

    <ImageView
        android:id="@+id/imageHomeExpandCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_expand_card"
        app:layout_constraintBottom_toBottomOf="@id/textHomeFinalCard"
        app:layout_constraintEnd_toEndOf="@id/imageHomeBackgroundCreditCard"
        app:layout_constraintTop_toTopOf="@id/textHomeFinalCard"
        app:tint="@android:color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>